--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             opacity: 0.6;
         }
 
+        /* Hero Section with Circle Photo */
         .hero {
             padding: 120px 0;
             min-height: 80vh;
@@ -67,7 +68,27 @@
             align-items: center;
         }
 
-        .hero h1 {
+        .hero-content {
+            display: grid;
+            grid-template-columns: 250px 1fr;
+            gap: 60px;
+            align-items: center;
+        }
+
+        .hero-image {
+            width: 250px;
+            height: 250px;
+        }
+
+        .profile-photo {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 3px solid #1a1a1a;
+        }
+
+        .hero-text h1 {
             font-size: 72px;
             font-weight: 300;
             letter-spacing: -2px;
@@ -75,11 +96,11 @@
             line-height: 1.1;
         }
 
-        .hero h1 strong {
+        .hero-text h1 strong {
             font-weight: 600;
         }
 
-        .hero p {
+        .hero-text p {
             font-size: 20px;
             color: #666;
             margin-bottom: 40px;
@@ -130,16 +151,7 @@
 
         /* About Section */
         .about-content {
-            display: grid;
-            grid-template-columns: 300px 1fr;
-            gap: 80px;
-            align-items: start;
-        }
-
-        .profile-image {
-            width: 100%;
-            height: auto;
-            border-radius: 2px;
+            max-width: 900px;
         }
 
         .about-text h2 {
@@ -181,17 +193,33 @@
             color: #999;
         }
 
-        /* Experience Section */
+        /* Experience Section with Company Logos */
         .experience-item {
             margin-bottom: 80px;
             padding-bottom: 80px;
             border-bottom: 1px solid #e0e0e0;
+            display: grid;
+            grid-template-columns: 120px 1fr;
+            gap: 40px;
+            align-items: start;
         }
 
         .experience-item:last-child {
             border-bottom: none;
             margin-bottom: 0;
             padding-bottom: 0;
+        }
+
+        .company-logo {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #e0e0e0;
+        }
+
+        .experience-details {
+            flex: 1;
         }
 
         .experience-header {
@@ -241,7 +269,7 @@
             color: #1a1a1a;
         }
 
-        /* Projects Section */
+        /* Projects Section with Circle Images */
         .project {
             margin-bottom: 100px;
         }
@@ -252,7 +280,7 @@
 
         .project-content {
             display: grid;
-            grid-template-columns: 1fr 1fr;
+            grid-template-columns: 1fr 300px;
             gap: 80px;
             align-items: center;
         }
@@ -307,13 +335,17 @@
             opacity: 0.6;
         }
 
+        .project-image-wrapper {
+            width: 300px;
+            height: 300px;
+        }
+
         .project-image {
-            background: #f5f5f5;
-            height: 400px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 48px;
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 2px solid #e0e0e0;
         }
 
         /* Contact Section */
@@ -374,14 +406,35 @@
                 padding: 0 20px;
             }
 
-            .hero h1 {
+            .hero-content {
+                grid-template-columns: 1fr;
+                gap: 40px;
+                text-align: center;
+            }
+
+            .hero-image {
+                margin: 0 auto;
+            }
+
+            .hero-text h1 {
                 font-size: 42px;
             }
 
-            .about-content,
             .project-content {
                 grid-template-columns: 1fr;
                 gap: 40px;
+            }
+
+            .project-image-wrapper {
+                margin: 0 auto;
+            }
+
+            .experience-item {
+                grid-template-columns: 1fr;
+            }
+
+            .company-logo {
+                margin: 0 auto;
             }
 
             .nav-links {
@@ -418,13 +471,20 @@
         </div>
     </header>
 
-    <!-- Hero Section -->
+    <!-- Hero Section with Circle Photo -->
     <section class="hero">
         <div class="container">
-            <h1>Hi, I'm <strong>Hardhiq Choudhary</strong><br>Computer Science Graduate Student</h1>
-            <p>MS CS at George Washington University | Ex-Senior Analyst at AON | Building innovative solutions with Python, Swift, and data analytics</p>
-            <a href="#contact" class="cta-button">Get In Touch</a>
-            <a href="https://www.linkedin.com/in/hardhiq-choudhary" target="_blank" class="cta-button secondary">LinkedIn</a>
+            <div class="hero-content">
+                <div class="hero-image">
+                    <img src="My_Photo.jpg" alt="Hardhiq Choudhary" class="profile-photo">
+                </div>
+                <div class="hero-text">
+                    <h1>Hi, I'm <strong>Hardhiq Choudhary</strong><br>Computer Science Graduate Student</h1>
+                    <p>MS CS at George Washington University | Ex-Senior Analyst at AON | Building innovative solutions with Python, Swift, and data analytics</p>
+                    <a href="#contact" class="cta-button">Get In Touch</a>
+                    <a href="https://www.linkedin.com/in/hardhiq-choudhary" target="_blank" class="cta-button secondary">LinkedIn</a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -433,9 +493,6 @@
         <div class="container">
             <div class="section-title">About Me</div>
             <div class="about-content">
-                <div>
-                    <img src="My_Photo.jpg" alt="Hardhiq Choudhary" class="profile-image">
-                </div>
                 <div class="about-text">
                     <h2>Developer & Data Analyst</h2>
                     <p>Currently pursuing MS in Computer Science at George Washington University (2025-2027), with over 4 years of experience spanning data analytics, ETL pipeline optimization, and software development.</p>
@@ -445,7 +502,7 @@
                     <div class="skills">
                         <div class="skill-item">
                             <h3>Languages</h3>
-                            <p>Python, SQL, Swift, Java</p>
+                            <p>Python, SQL, Swift</p>
                         </div>
                         <div class="skill-item">
                             <h3>Data & Analytics</h3>
@@ -465,55 +522,64 @@
         </div>
     </section>
 
-    <!-- Experience Section -->
+    <!-- Experience Section with Company Logos -->
     <section id="experience">
         <div class="container">
             <div class="section-title">Work Experience</div>
             
             <div class="experience-item">
-                <div class="experience-header">
-                    <h3>AON Consulting</h3>
-                    <span class="date">Aug 2021 – Aug 2025</span>
+                <img src="AON_PIC.jpg" alt="AON" class="company-logo">
+                <div class="experience-details">
+                    <div class="experience-header">
+                        <h3>AON Consulting</h3>
+                        <span class="date">Aug 2021 – Aug 2025</span>
+                    </div>
+                    <div class="company-role">Senior Configuration Analyst – Health | Gurugram, India</div>
+                    <ul>
+                        <li>Built and optimized ETL pipelines using Microsoft SQL Server and Actian DataConnect to convert raw healthcare data into client-specific output formats, processing 50,000+ monthly records</li>
+                        <li>Led migration of 4,400+ ETL reports to new data integration platform, streamlining conversion processes and improving system efficiency</li>
+                        <li>Optimized ETL workflows achieving <strong>90% runtime reduction</strong> (from 13 hours to 1.5 hours) by implementing targeted field comparison approach, replacing full dataset analysis and significantly reducing computational overhead</li>
+                        <li>Automated employee lifecycle data workflows (new hires, terminations, rehires, marital status changes, dependent additions) using Python (Pandas, NumPy), reducing manual processing time by 40% and minimizing data inconsistencies</li>
+                        <li>Developed Power BI dashboards and conducted exploratory data analysis to deliver actionable insights on enrollment trends and coverage utilization, identifying data anomalies that prevented $200K+ in annual claim discrepancies</li>
+                        <li>Received multiple performance awards including Aon Stars Award and Gold Team Award for exceptional client service and technical innovation</li>
+                    </ul>
                 </div>
-                <div class="company-role">Senior Configuration Analyst – Health | Gurugram, India</div>
-                <ul>
-                    <li>Built and optimized ETL pipelines using Microsoft SQL Server and Actian DataConnect to convert raw healthcare data into client-specific output formats, processing 50,000+ monthly records</li>
-                    <li>Led migration of 4,400+ ETL reports to new data integration platform, streamlining conversion processes and improving system efficiency</li>
-                    <li>Optimized ETL workflows achieving <strong>90% runtime reduction</strong> (from 13 hours to 1.5 hours) by implementing targeted field comparison approach, replacing full dataset analysis and significantly reducing computational overhead</li>
-                    <li>Automated employee lifecycle data workflows (new hires, terminations, rehires, marital status changes, dependent additions) using Python (Pandas, NumPy), reducing manual processing time by 40% and minimizing data inconsistencies</li>
-                    <li>Developed Power BI dashboards and conducted exploratory data analysis to deliver actionable insights on enrollment trends and coverage utilization, identifying data anomalies that prevented $200K+ in annual claim discrepancies</li>
-                    <li>Received multiple performance awards including Aon Stars Award and Gold Team Award for exceptional client service and technical innovation</li>
-                </ul>
             </div>
 
             <div class="experience-item">
-                <div class="experience-header">
-                    <h3>Wipro Limited</h3>
-                    <span class="date">Mar 2021 – Aug 2021</span>
+                <img src="Wipro.jpg" alt="Wipro" class="company-logo">
+                <div class="experience-details">
+                    <div class="experience-header">
+                        <h3>Wipro Limited</h3>
+                        <span class="date">Mar 2021 – Aug 2021</span>
+                    </div>
+                    <div class="company-role">Data Analytics Intern | Gurugram, India</div>
+                    <ul>
+                        <li>Developed and optimized SQL queries to address diverse project requirements, ensuring data accuracy and efficiency across multiple datasets</li>
+                        <li>Implemented ETL tools and shell scripting to generate automated output files aligned with specified client requirements</li>
+                        <li>Collaborated with cross-functional teams to analyze data patterns and deliver insights supporting business decision-making</li>
+                    </ul>
                 </div>
-                <div class="company-role">Data Analytics Intern | Gurugram, India</div>
-                <ul>
-                    <li>Developed and optimized SQL queries to address diverse project requirements, ensuring data accuracy and efficiency across multiple datasets</li>
-                    <li>Implemented ETL tools and shell scripting to generate automated output files aligned with specified client requirements</li>
-                    <li>Collaborated with cross-functional teams to analyze data patterns and deliver insights supporting business decision-making</li>
-                </ul>
             </div>
 
             <div class="experience-item">
-                <div class="experience-header">
-                    <h3>George Washington University</h3>
-                    <span class="date">Sep 2025 – Present</span>
+                <img src="GWU_logo.png" alt="George Washington University" class="company-logo">
+                <div class="experience-details">
+                    <div class="experience-header">
+                        <h3>George Washington University</h3>
+                        <span class="date">Sep 2025 – Present</span>
+                    </div>
+                    <div class="company-role">Student Events Assistant I | Washington, D.C.</div>
+                    <ul>
+                        <li>Coordinate and support campus events, ensuring smooth operations and positive attendee experiences</li>
+                        <li>Collaborate with university departments to manage event logistics, setup, and post-event breakdown</li>
+                    </ul>
                 </div>
-                <div class="company-role">Student Events Assistant I | Washington, D.C.</div>
-                <ul>
-                    <li>Coordinate and support campus events, ensuring smooth operations and positive attendee experiences</li>
-                    <li>Collaborate with university departments to manage event logistics, setup, and post-event breakdown</li>
-                </ul>
             </div>
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Projects Section with Circle Images -->
     <section id="projects">
         <div class="container">
             <div class="section-title">Selected Projects</div>
@@ -535,7 +601,9 @@
                             <a href="https://github.com/hardhiqchoudhary-arch/OurNews-iOS" class="project-link" target="_blank">View Code</a>
                         </div>
                     </div>
-                    <div class="project-image">📱</div>
+                    <div class="project-image-wrapper">
+                        <img src="Our_News.png" alt="OurNews App" class="project-image">
+                    </div>
                 </div>
             </div>
 
@@ -552,7 +620,9 @@
                             <span class="tag">Automation</span>
                         </div>
                     </div>
-                    <div class="project-image">📊</div>
+                    <div class="project-image-wrapper">
+                        <img src="AON_PIC.jpg" alt="ETL Pipeline" class="project-image">
+                    </div>
                 </div>
             </div>
 
@@ -568,7 +638,9 @@
                             <span class="tag">Analytics</span>
                         </div>
                     </div>
-                    <div class="project-image">🌍</div>
+                    <div class="project-image-wrapper">
+                        <img src="Covid_19.png" alt="COVID-19 Dashboard" class="project-image">
+                    </div>
                 </div>
             </div>
         </div>
