Update project image source in index.html

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
                         </div>
                     </div>
                     <div class="project-image-wrapper">
-                        <img src="AON_PIC.jpg" alt="ETL Pipeline" class="project-image">
+                        <img src="ETL.png" alt="ETL Pipeline" class="project-image">
                     </div>
                 </div>
             </div>
