Add phone contact option to index.html

--- a/index.html
+++ b/index.html
@@ -653,10 +653,11 @@
             <div class="contact-content">
                 <h2>Let's Work Together</h2>
                 <p>I'm actively seeking Summer 2026 internship opportunities in Data Analytics, Software Engineering, and Machine Learning. Feel free to reach out!</p>
-                <div class="contact-links">
-                    <a href="mailto:hardhiq.choudhary@gwmail.gwu.edu" class="contact-link">Email</a>
-                    <a href="https://linkedin.com/in/hardhiq-choudhary" class="contact-link" target="_blank">LinkedIn</a>
-                    <a href="https://github.com/hardhiqchoudhary-arch" class="contact-link" target="_blank">GitHub</a>
+            <div class="contact-links">
+                <a href="tel:+12022103257" class="contact-link">Phone</a>
+                <a href="mailto:hardhiq.choudhary@gwmail.gwu.edu" class="contact-link">Email</a>
+                <a href="https://linkedin.com/in/hardhiq-choudhary" class="contact-link" target="_blank">LinkedIn</a>
+                <a href="https://github.com/hardhiqchoudhary-arch" class="contact-link" target="_blank">GitHub</a>
                 </div>
             </div>
         </div>
